force-app/main/default/objects/ProductDifferentialDashboard__mdt/ProductDifferentialDashboard__mdt.object-meta.xml
<CustomObject>
    <label>ProductDifferentialDashboard</label>
    <pluralLabel>ProductDifferentialDashboards</pluralLabel>
</CustomObject>