force-app/main/default/objects/ProductDifferentialDashboard__mdt/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <label>Plant Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D228</fullName>
                <default>true</default>
                <label>D228</label>
            </value>
            <value>
                <fullName>D229</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>