force-app/main/default/objects/ProductDifferentialDashboard__mdt/fields/Quote_Name1__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name1__c</fullName>
    <label>Quote Name1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>