force-app/main/default/objects/ProductDifferentialDashboard__mdt/fields/Quote_Name2__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name2__c</fullName>
    <label>Quote Name2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>