force-app/main/default/objects/ProductDifferentialDashboard__mdt/fields/Quote_Name3__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name3__c</fullName>
    <label>Quote Name3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>