force-app/main/default/objects/ProductDifferentialDashboard__mdt/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barge</fullName>
                <default>true</default>
                <label>Barge</label>
            </value>
            <value>
                <fullName>Cargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>