force-app/main/default/objects/ProductDifferentialDashboard__mdt/listViews/Product_Differential.listView-meta.xml
<ListView>
    <fullName>Product_Differential</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Type__c</columns>
    <columns>Quote_Type__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Quote_Name1__c</columns>
    <columns>Quote_Name2__c</columns>
    <columns>Quote_Name3__c</columns>
    <columns>Quote_Name4__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Product Differential</value>
    </filters>
    <label>Product Differential</label>
    <language>en_US</language>
</ListView>