force-app/main/default/objects/ProductDifferentialDashboard__mdt/listViews/Quote_Name.listView-meta.xml
<ListView>
    <fullName>Quote_Name</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Type__c</columns>
    <columns>Quote_Name1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Quote Name</value>
    </filters>
    <label>Quote Name</label>
    <language>en_US</language>
</ListView>